# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "streamlit_prophet"
version = "1.0.0"
description = "Deploy a Streamlit app to train, evaluate and optimize a Prophet forecasting model visually."
readme = "README.md"
authors = [
  "Maxime Lutel <maxime.lutel@artefact.com>"
]
license = "MIT"
repository = "https://github.com/artefactory-global/streamlit_prophet"
homepage = "https://github.com/artefactory-global/streamlit_prophet"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = ["streamlit", "prophet", "forecasting", "time-series", "data-science"]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"streamlit_prophet" = "streamlit_prophet.cli.__main__:app"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
typer = {extras = ["all"], version = "^0.12.0"}
rich = "^13.9.0"
pandas = "^2.2.0"
numpy = "^2.1.0"
prophet = "^1.3.0"
holidays = "^0.50.0"
plotly = "^5.24.0"
streamlit = "^1.53.0"
scipy = "^1.14.0"
pyarrow = "^18.0.0"
matplotlib = "^3.10.0"
pillow = "^11.0.0"
pyyaml = "^6.0.2"
vacances-scolaires-france = "^0.8.0"

[tool.poetry.group.dev.dependencies]
darglint = "^1.8.0"
isort = "^5.8.0"
pyupgrade = "^2.12.0"
black = "^25.1.0"
flake8 = "^7.1.0"
mypy = "^1.14.0"
bandit = "^1.7.9"
safety = "^3.2.0"
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pylint = "^3.3.0"
pydocstyle = "^6.3.0"
pre-commit = "^4.0.0"
mypy-extensions = "^1.0.0"

[tool.black]
# https://github.com/psf/black
line-length = 100
target-version = ["py313"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 100
